# ChangeLog for dev-db/m17n-contrib
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/m17n-contrib/ChangeLog,v 1.3 2008/11/02 14:23:50 maekke Exp $

  02 Nov 2008; Markus Meier <maekke@gentoo.org> m17n-contrib-1.1.7.ebuild:
  amd64/x86 stable, bug #244898

*m17n-contrib-1.1.8 (29 Oct 2008)

  29 Oct 2008; MATSUU Takuto <matsuu@gentoo.org> +m17n-contrib-1.1.8.ebuild:
  Version bumped.

*m17n-contrib-1.1.7 (18 Aug 2008)

  18 Aug 2008; MATSUU Takuto <matsuu@gentoo.org> +metadata.xml,
  +m17n-contrib-1.1.7.ebuild:
  Initial import, bug #235090.
