@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/m17n-db/m17n-db-1.5.1.ebuild,v 1.2 2008/02/20 19:41:17 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/m17n-db/m17n-db-1.5.4.ebuild,v 1.1 2009/05/27 16:54:25 matsuu Exp $
 
 DESCRIPTION="Database for the m17n library"
 HOMEPAGE="http://www.m17n.org/m17n-lib/"
@@ -8,8 +8,11 @@ SRC_URI="http://www.m17n.org/m17n-lib-download/${P}.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86"
 IUSE=""
+
+DEPEND="sys-devel/gettext"
+RDEPEND="virtual/libintl"
 
 src_install() {
 	emake DESTDIR="${D}" install || die
