@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/m17n-db
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/m17n-db/ChangeLog,v 1.38 2009/04/05 18:56:11 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/m17n-db/ChangeLog,v 1.39 2009/05/27 16:54:25 matsuu Exp $
+
+*m17n-db-1.5.4 (27 May 2009)
+
+  27 May 2009; MATSUU Takuto <matsuu@gentoo.org> -m17n-db-1.2.0.ebuild,
+  -m17n-db-1.5.1.ebuild, +m17n-db-1.5.4.ebuild:
+  Version bumped. Removed old versions.
 
   05 Apr 2009; Raúl Porcel <armin76@gentoo.org> m17n-db-1.5.3.ebuild:
   Add ~sh
