@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/m17n-contrib
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/m17n-contrib/ChangeLog,v 1.3 2008/11/02 14:23:50 maekke Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/m17n-contrib/ChangeLog,v 1.4 2009/05/27 16:54:16 matsuu Exp $
+
+*m17n-contrib-1.1.9 (27 May 2009)
+
+  27 May 2009; MATSUU Takuto <matsuu@gentoo.org> +m17n-contrib-1.1.9.ebuild:
+  Version bumped.
 
   02 Nov 2008; Markus Meier <maekke@gentoo.org> m17n-contrib-1.1.7.ebuild:
   amd64/x86 stable, bug #244898
